# GALP

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  compressors-benchmarks.cu  micro-benchmarks.cu
benchmark/generated-bindings/: alp-double-decompress_column-bindings.cu  alp-double-query_column-bindings.cu  alp-double-query_multi_column-bindings.cu  alp-float-decompress_column-bindings.cu  alp-float-query_column-bindings.cu  alp-float-query_multi_column-bindings.cu  alpextended-double-decompress_column-bindings.cu  alpextended-double-query_column-bindings.cu  alpextended-double-query_multi_column-bindings.cu  alpextended-float-decompress_column-bindings.cu  alpextended-float-query_column-bindings.cu  alpextended-float-query_multi_column-bindings.cu  bp-uint32_t-decompress_column-bindings.cu  bp-uint32_t-query_column-bindings.cu  bp-uint64_t-decompress_column-bindings.cu  bp-uint64_t-query_column-bindings.cu  ffor-uint32_t-compute_column-bindings.cu  ffor-uint32_t-decompress_column-bindings.cu  ffor-uint32_t-query_column-bindings.cu  ffor-uint32_t-query_multi_column-bindings.cu  ffor-uint64_t-compute_column-bindings.cu  ffor-uint64_t-decompress_column-bindings.cu  ffor-uint64_t-query_column-bindings.cu  ffor-uint64_t-query_multi_column-bindings.cu
benchmark/include/generated-bindings/: kernel-bindings.cuh  multi-column-device-kernels.cuh
benchmark/nvcomp/: benchmark-compressors.cu  nvcomp-compressors.cu
code-generators/: generate-kernel-bindings.py  generate-multicolumn-kernels.py
src/: CMakeLists.txt
src/alp/: alp-bindings.cu
src/engine/: enums.cu
src/include/alp/: alp-bindings.cuh
src/include/engine/: data.cuh  device-utils.cuh  enums.cuh  kernels.cuh  multi-column-host-kernels.cuh  verification.cuh
src/include/flsgpu/: alp.cuh  consts.cuh  device-types.cuh  fls-switch-case.cuh  fls.cuh  flsgpu-api.cuh  host-utils.cuh  old-fls.cuh  structs.cuh  utils.cuh
src/include/generator/: generate_binaries.hpp
src/include/nvcomp/: benchmark-compressors.cuh  nvcomp-compressors.cuh
test/: CMakeLists.txt  galp_test.cu  thrust_core_test.cu  thrust_memcpy_test.cu
